k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alphafold3
  labels:
    name: alphafold3
    environment: production
